Fixed an issue with table images and carousel images, added a few comments for readability purposes

--- a/index.css
+++ b/index.css
@@ -103,3 +103,8 @@ img{
  width: 350px;
 }
 
+.carousel-img {
+ width: 100%;
+ height: 600px;
+}
+
